# LicenseServer

./: .dockerignore  .env.example  .gitignore  COMPLETED.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Dockerfile.eks  LICENSE  PLAN.md  README.md  SECURITY.md  TODO.md  bootstrap.mjs  docker-compose.silo.yml  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
clients/: README.md
clients/csharp/: LicenseClient.cs  LicenseClient.csproj  README.md
clients/node/: README.md  package-lock.json  package.json  tsconfig.json
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/swift/: Package.swift  README.md
docs/: ALPHA-READINESS.md  AWS-DEPLOY.md  AWS-HOSTING.md  DEPLOYMENT-GUARD.md  DEPLOYMENT.md  EKS-DEPLOYMENT.md  MULTI_PRODUCT_LICENSING_PLAN.md  PLATFORM-BUILD-COSTS.md  RELEASES-MANAGEMENT.md  SECURITY.md  SILO-LAB.md  USAGE-METERING-INTEGRATION.md  predict-integration.md
docs/agencioaws/: ADMIN_AUTH.md  CHANGE_LOG_2026-04-25.md  CUSTOMER_AUTH.md  DEPLOYMENT_REFERENCE.md  (+2 more)
k8s/: configmap-dev.yaml  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  minio.yaml  postgres.yaml  secret-dev.yaml  secret.yaml  service.yaml  serviceaccount.yaml
licensing_seeds/: 01-test-skus.cjs  02-test-licenses.cjs  README.md
prisma/: schema.prisma  seed-k8inspector.ts  seed-products.ts  seed-silo.ts  sync-stripe.ts  update-stripe-prices.ts
public/: admin.css  admin.html  admin.js  app.js  idleTimer.js  index.html  privacy.html  reset-password.html  styles.css  terms.html
scripts/: issue-cortex-mtls.mjs
src/: index.ts
(+79 files in other folders)
