[package]
name = "license-client"
version = "1.0.0"
edition = "2021"
description = "License validation client for Rust applications"
license = "MIT"
keywords = ["license", "validation", "client"]

[lib]
name = "license_client"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "license-cli"
path = "src/bin/cli.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_SystemInformation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["async"]
async = ["tokio"]
blocking = []

[profile.release]
lto = true
codegen-units = 1
strip = true
